# invman

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/config/: settings.py
app/database/: db.py  utils.py
app/models/: __init__.py  inventory_item.py  inventory_transaction.py  mixins.py  product.py  product_variant.py  purchase_order.py  purchase_order_item.py  supplier.py  warehouse.py
app/repositories/: base.py  inventory_item.py  inventory_transaction.py  product.py  product_variant.py  purchase_order.py  purchase_order_item.py  supplier.py  warehouse.py
app/schemas/: update.py
app/services/: base.py
app/tests/: conftest.py
docker/: Dockerfile.dev
docs/architecture/: microservices.mermaid
libs/common/: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 13fec7475915_create_initial_tables.py  f19fe4c37203_init.py
requirements/: base.txt  development.txt
scripts/: entrypoint-development.sh  entrypoint-production.sh  entrypoint-staging.sh  run-migrations.sh
services/analytics/: main.py  pyproject.toml
services/inventory/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
services/inventory/docker-entrypoint-initdb.d/: generate-sql.sh
services/inventory/env/: .env.example
services/notification/: pyproject.toml
services/order/: main.py  pyproject.toml
services/supplier/: main.py  pyproject.toml
services/user/: pyproject.toml
services/warehouse/: main.py  pyproject.toml
(+4 files in other folders)
