[project]
name = "invman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["services/inventory", "services/warehouse", "services/order", "services/supplier", "services/notification", "services/analytics", "services/user", "libs/common"]
